Work on mobile fixes...

--- a/app/assets/stylesheets/calculator.scss
+++ b/app/assets/stylesheets/calculator.scss
@@ -193,7 +193,7 @@ div.jumbotron.wider {
 }
 @media screen and (max-device-width: 1024px) {
   input.slider {
-    width: 50px;
+    width: 100px;
   }
 }
 
